--- a/inference/libdai/Makefile.conf
+++ b/inference/libdai/Makefile.conf
@@ -26,7 +26,7 @@ OE=.o
 # Binary executable
 EE=
 # MatLab compiled MEX file
-ME=.mexglx
+ME=.mexa64
 
 # COMPILER
 # Compile using GNU C++ Compiler
@@ -71,7 +71,7 @@ MEXLIB=
 # The following should resolve to the SWIG command
 SWIG=swig
 # Location of Python header files
-INCLUDE_PYTHON=/usr/include/python2.5
+INCLUDE_PYTHON=/usr/include/python2.7
 # Location of Boost C++ library header files
 INCLUDE_BOOST=/usr/include/boost
 
