added Makefile, now make without Matlab

--- a/inference/libdai/Makefile.conf
+++ b/inference/libdai/Makefile.conf
@@ -54,10 +54,8 @@ CCLIB=-Llib
 # MATLAB
 # MatLab version 7.3 (R2006b) or newer?
 NEW_MATLAB=true
-# Replace the following by the directory where MatLab has been installed
-MATLABDIR=/usr/local/MATLAB/R2012a
 # The following should resolve to the MatLab mex compile command
-MEX=$(MATLABDIR)/bin/mex
+MEX=mex
 # Specify the C++ compiler and flags for MEX
 MEXFLAGS:=CXX\#$(CC) CXXFLAGS\#'$(CCFLAGS)'
 # Standard include directories for MEX
