removed debug option in svm-struct-matlab-1.2/Makefile

--- a/svm-struct-matlab-1.2/Makefile
+++ b/svm-struct-matlab-1.2/Makefile
@@ -84,7 +84,7 @@ svm_struct_learn.$(MEXEXT) : svm_struct_learn_mex.c \
   $(svm_custom_objs) \
   $(svm_light_objs) \
   $(svm_struct_objs)
-	$(MEX) $(MEXFLAGS) -g $^ -output "$@"
+	$(MEX) $(MEXFLAGS) $^ -output "$@"
 
 .PHONY: clean
 clean:
